k8s-network/frontend-pod-srv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  labels: 
    app: web
spec:
  containers:
    - name: client
      image: vimazac/multi-clientv0.5
      ports:
        - containerPort: 3000
  
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
