k8s-network/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-cph
spec:
  type: LoadBalancer
  selector:
    app: vilniusDevops
  ports:
    - port: 8080
      targetPort: 8080
