k8s-network/nodeport-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lund-devops
  labels:
    app: lund-devops
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: vilnius-pod
  labels:
    app: vilniusDevops
spec:
  containers:
    - name: calculator
      image: vimazac/calculator
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: devops-cph
spec:
  type: NodePort
  selector:
    app: vilniusDevops
  ports:
    - port: 8080
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 31579
