k8s-network/redis-pod-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-server
  labels:
    app: redis-server
spec:
  containers:
    - name: redis-server
      image: vimazac/redis-server
      imagePullPolicy: Always
      ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-server-service
spec:
  type: ClusterIP
  selector:
    app: redis-server
  ports:
    - port: 6379
      targetPort: 6379
