k8s-network/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: devops-cph
              servicePort: 8080
          - path: /web/?(.*)
            backend:
              serviceName: frontend-service
              servicePort: 3000
